--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ android {
     }
 }
 
+
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.4.1'
@@ -64,4 +65,7 @@ dependencies {
 
     //Floating Animated Button
     implementation 'com.github.clans:fab:1.6.2'
+
+    //ShadowLibrary
+    implementation 'com.github.BluRe-CN:ComplexView:v1.1'
 }
