--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.artsell">
+    package="com.example.artsell" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -12,9 +12,20 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ArtSell">
+        android:theme="@style/Theme.ArtSell" >
         <activity
-            android:name=".GoogleSingInActivity"
+            android:name=".activities.SplashScreenActivity"
+            android:exported="true"
+            android:theme="@style/SplashTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
+        <activity
+            android:name=".activities.GoogleSignInActivity"
             android:exported="false" />
         <activity
             android:name=".activities.SettingsActivity"
@@ -29,21 +40,8 @@
             android:name=".activities.ForgotPasswordActivity"
             android:exported="false" />
         <activity
-            android:name=".SlideActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".welcome.WPage1"
+            android:name=".activities.SlideActivity"
             android:exported="false" />
-        <activity
-            android:name=".welcome.SplashScreen"
-            android:exported="true"
-            android:theme="@style/SplashTheme" />
         <activity
             android:name=".activities.PlacedOrderActivity"
             android:exported="false" />
@@ -57,16 +55,13 @@
             android:name=".activities.ViewAllActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.MainActivity"
             android:exported="true" />
         <activity
             android:name=".activities.RegistrationActivity"
             android:exported="true" />
         <activity
             android:name=".activities.LoginActivity"
-            android:exported="false" />
-        <activity
-            android:name=".activities.GoogleSignInActivity"
             android:exported="false" />
 
         <meta-data
